--- a/src/pages/CyclicRedundancyCheck/CyclicRedundancyCheck.css
+++ b/src/pages/CyclicRedundancyCheck/CyclicRedundancyCheck.css
@@ -1,12 +1,10 @@
 .crc-page {
-  gap: 1.5rem;
+  gap: 1rem;
   width: 100vw;
+  height: 100vh;
+  padding: 1rem;
   display: flex;
-  padding: 2rem;
-  min-height: 100vh;
-  align-items: center;
-  background-color: white;
-  flex-direction: column;
+  justify-content: center;
 }
 
 .input-container, .text-container {
@@ -14,7 +12,6 @@
   gap: 0.5rem;
   display: flex;
   padding: 1rem;
-  max-width: 600px;
   border-radius: 12px;
   flex-direction: column;
   background-color: white;
@@ -53,6 +50,45 @@ input[type='checkbox'] {
 }
 
 .buttons-container {
-    gap: 1rem;
-    display: flex;
+  gap: 1rem;
+  display: flex;
+}
+
+.left-side-crc-container, .right-side-crc-container {
+  gap: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.right-side-crc-container {
+  min-width: 40%;
+  max-height: 95vh;
+  overflow-y: auto;
+  height: fit-content;
+  border-radius: 1rem;
+  max-width: fit-content;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.right-side-crc-container h2 {
+  text-align: center;
+}
+
+.table-division {
+  border-collapse: collapse;
+}
+
+.table-division td, .table-division th {
+  color: #1f2937; 
+  text-align: center;
+}
+
+.table-division th {
+  border: none;
+  font-weight: 600;
+  border-radius: 6px;
+  background-color: #f9fafb; 
+  border-bottom: 2px solid #002642;
 }
