--- a/src/pages/CyclicRedundancyCheck/CyclicRedundancyCheck.css
+++ b/src/pages/CyclicRedundancyCheck/CyclicRedundancyCheck.css
@@ -89,6 +89,9 @@ input[type='checkbox'] {
   border: none;
   font-weight: 600;
   border-radius: 6px;
-  background-color: #f9fafb; 
   border-bottom: 2px solid #002642;
+}
+
+.quotient-table {
+  border-top: 2px solid #002642;
 }
