feat(graph): add borrar grafo

--- a/src/pages/Dijkstra/Dijkstra.css
+++ b/src/pages/Dijkstra/Dijkstra.css
@@ -98,3 +98,9 @@
   font-weight: 400;
   text-align: center;
 }
+
+.button-selector-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
