--- a/src/pages/Dijkstra/Dijkstra.css
+++ b/src/pages/Dijkstra/Dijkstra.css
@@ -14,7 +14,7 @@
     height: 100%;
     padding: 1rem;
     display: flex;
-    overflow: hidden;
+    overflow: auto;
     align-items: center;
     flex-direction: column;
     
@@ -31,6 +31,7 @@
     padding: 1rem;
     display: flex;
     margin: 1rem 0;
+    overflow-x: auto;
     overflow-y: auto;
     border-radius: 1rem;
     align-items: center;
@@ -73,8 +74,8 @@
 }
 
 .table {
-    width: 100%;
     overflow: hidden;
+    width: fit-content;
     border-radius: 0.75rem;
     border-collapse: collapse;
 }
