--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -40,6 +40,7 @@
 
 .sidebar-item {
     padding: 3%;
+    cursor: pointer;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
@@ -54,4 +55,10 @@
 
 .sidebar-item a {
     color: black;
+}
+
+.sidebar-item.active {
+    font-weight: bold;
+    border-radius: 5px;
+    background-color: #ddd;
 }
