--- a/src/pages/LinkState/LinkState.css
+++ b/src/pages/LinkState/LinkState.css
@@ -19,17 +19,19 @@
     flex-direction: column;
 }
 
-.options-link-state-list {
-    gap: 1rem;
-    display: flex;
-    padding: 0.5rem;
-    width: fit-content;
-    margin-left: 20rem;
-    border-radius: 1rem;
-    align-items: center;
-    justify-content: flex-end;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+.add-table-container h2, .network-topology-container h2{
+    text-align: center;
 }
+
+.options-link-state-list {
+    margin: 0;
+    gap: 0.5rem;
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .add-table-container, .network-topology-container{
     width: 100%;
@@ -37,6 +39,11 @@
     padding: 0.5rem;
     border-radius: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.add-table-container {
+    margin-top: 2rem;
 }
 
 .form-header-container {
@@ -58,13 +65,20 @@
 .links-list {
     overflow-y: auto;
     max-height: 200px;    
+    width: fit-content;
 }
 
 .link-item {
+    gap: 0.5rem;
     display: flex;
     margin: 1rem 0;
     align-items: center;
-    justify-content: space-around;
+}
+
+.link-item input {
+    width: 10rem;
+    border-radius: 0.5rem;
+    border: 1px solid #ccc;
 }
 
 .tables-links-container {
@@ -91,3 +105,4 @@
 .link-state-table {
     height: fit-content;
 }
+
