--- a/src/pages/Dijkstra/Dijkstra.css
+++ b/src/pages/Dijkstra/Dijkstra.css
@@ -5,19 +5,17 @@
 }
 
 .left-graph-container {
-    width: 100%;
+    width: 50%;
     height: 100%;
 }
 
 .right-dijkstra-container {
-    width: 100%;
+    width: 50%;
     height: 100%;
     padding: 1rem;
-    display: flex;
-    overflow: auto;
+        display: flex;
     align-items: center;
     flex-direction: column;
-    
 }
 
 .selecter-nodes-container {
@@ -27,16 +25,18 @@
 }
 
 .dijkstra-table-container {
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    margin: 1rem 0;
-    overflow-x: auto;
-    overflow-y: auto;
-    border-radius: 1rem;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  display: block;
+  overflow-x: auto;
+  overflow-y: auto;
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.dijkstra-table-container h2 {
+    text-align: center;
 }
 
 .text-container-route {
@@ -74,10 +74,8 @@
 }
 
 .table {
-    overflow: hidden;
-    width: fit-content;
-    border-radius: 0.75rem;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .table thead {
