--- a/src/pages/DistanceVector/DistanceVector.css
+++ b/src/pages/DistanceVector/DistanceVector.css
@@ -5,12 +5,12 @@
 }
 
 .right-distance-vector-container {
+    flex: 1;
     width: 100%;
     height: 100%;
     padding: 1rem;
     display: flex;
     overflow: auto;
-    align-items: center;
     flex-direction: column;
 }
 
@@ -28,6 +28,7 @@
 
 .distance-vector-info-container {
     text-align: left;
+    margin-top: 1rem;
 }
 
 .distance-vector-table-container {
